--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,8 +21,15 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-Regular.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-Italic.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-Light.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-LightItalic.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-Medium.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-MediumItalic.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-Bold.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href="/fonts/Ubuntu-BoldItalic.woff" as="font" type="font/woff" crossorigin />
+
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
