--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,13 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { getCollection } from 'astro:content';
+import getReadingTime from 'reading-time';
+import FormattedDate from '../components/FormattedDate.astro';
+
+const posts = (await getCollection('blog')).sort(
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
 ---
 
 <!DOCTYPE html>
@@ -10,40 +17,31 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
+	<body class="min-h-screen">
+		<Header />
+		<main class="max-w-xl sm:px-0 px-6 mx-auto w-max">
+			<ul class="space-y-16">
+				{
+					posts.map((post) => (
+						<li class="flex flex-col gap-y-4 sm:flex-row text-center sm:text-left gap-x-4 items-center">
+							<a href={`/${post.slug}/`}>
+								<img src={post.data.heroImage} class="shadow-xl rounded-lg h-32 sm:h-20" alt={post.data.title}>
+							</a>
+							<div>
+								<a href={`/${post.slug}/`} class="flex flex-col">
+									<h4 class="font-bold text-2xl sm:text-3xl">{post.data.title}</h4>
+									<div class="text-base sm:text-lg">{post.data.description}</div>
+								</a>
+								<aside class="flex gap-x-2 text-sm sm:text-base justify-center sm:justify-start">
+									<FormattedDate date={post.data.pubDate}/>
+									&bullet;
+									<div class="whitespace-nowrap">☕ {getReadingTime(post.body).text}</div>
+								</aside>
+							</div>
+						</li>
+					))
+				}
 			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
 		</main>
 		<Footer />
 	</body>
