--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,11 +4,11 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
-import getReadingTime from "reading-time";
+import {render} from "astro/dist/runtime/server";
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, heroImage, body } = Astro.props;
+const { title, description, pubDate, heroImage, readingTime } = Astro.props;
 ---
 
 <html lang="en">
@@ -29,7 +29,7 @@ const { title, description, pubDate, heroImage, body } = Astro.props;
 						<aside class="flex gap-x-2 text-base justify-center sm:justify-start">
 							<FormattedDate date={pubDate}/>
 							&bullet;
-							<div class="whitespace-nowrap">☕ {getReadingTime(body).text}</div>
+							<div class="whitespace-nowrap">☕ {readingTime.minutesRead}</div>
 						</aside>
 						<hr />
 					</div>
