--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -11,9 +11,9 @@ export async function getStaticPaths() {
 }
 
 const post = Astro.props;
-const { Content } = await post.render();
+const { Content, remarkPluginFrontmatter } = await post.render();
 ---
 
-<BlogPost {...post.data} body={post.body}>
+<BlogPost {...post.data} readingTime={remarkPluginFrontmatter}>
 	<Content />
 </BlogPost>
