--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -29,7 +29,7 @@ const { title, description, pubDate, heroImage, readingTime } = Astro.props;
 						<aside class="flex gap-x-2 text-base justify-center sm:justify-start">
 							<FormattedDate date={pubDate}/>
 							&bullet;
-							<div class="whitespace-nowrap">☕ {readingTime.minutesRead}</div>
+							<div class="whitespace-nowrap">☕ {readingTime?.minutesRead}</div>
 						</aside>
 						<hr />
 					</div>
