--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,6 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import { getCollection } from 'astro:content';
-import getReadingTime from 'reading-time';
 import FormattedDate from '../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
@@ -17,26 +16,37 @@ const posts = (await getCollection('blog')).sort(
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body class="min-h-screen flex flex-col">
 		<Header />
-		<main class="max-w-xl sm:px-0 px-6 mx-auto w-max">
-			<ul class="space-y-16">
+		<main class="max-w-xl sm:px-0 px-6 mx-auto w-full">
+			<ul class="space-y-12">
 				{
 					posts.map((post) => (
-						<li class="flex flex-col gap-y-4 sm:flex-row text-center sm:text-left gap-x-4 items-center">
-							<a href={`/${post.slug}/`}>
-								<img src={post.data.heroImage} class="shadow-xl rounded-lg h-32 sm:h-20" alt={post.data.title}>
+						<li class="group flex flex-col gap-y-4 text-center sm:text-left gap-x-4">
+							<a href={`/${post.slug}/`} class="hidden sm:inline">
+								<h4 class="font-bold text-2xl sm:text-3xl text-primary-500 group-hover:text-primary-400 transition-colors">{post.data.title}</h4>
 							</a>
-							<div>
-								<a href={`/${post.slug}/`} class="flex flex-col">
-									<h4 class="font-bold text-2xl sm:text-3xl">{post.data.title}</h4>
-									<div class="text-base sm:text-lg">{post.data.description}</div>
+							<div class="flex flex-col sm:flex-row gap-y-4 gap-x-4">
+								<a href={`/${post.slug}/`} class="sm:w-1/4 w-3/4 mx-auto">
+									<img
+										src={post.data.heroImage}
+										class="shadow-md shadow-primary-400 rounded-lg aspect-video"
+										alt={post.data.title}
+									>
 								</a>
-								<aside class="flex gap-x-2 text-sm sm:text-base justify-center sm:justify-start">
-									<FormattedDate date={post.data.pubDate}/>
-									&bullet;
-									<div class="whitespace-nowrap">☕ {post.render().then((p) => p.remarkPluginFrontmatter?.minutesRead)}</div>
-								</aside>
+								<div class="sm:w-3/4 flex flex-col gap-y-2">
+									<a href={`/${post.slug}/`} class="sm:hidden">
+										<h4 class="font-bold text-2xl sm:text-3xl text-primary-500 group-hover:text-primary-400 transition-colors">{post.data.title}</h4>
+									</a>
+									<aside class="flex gap-x-2 text-sm justify-center sm:justify-start">
+										<FormattedDate date={post.data.pubDate}/>
+										&bullet;
+										<div class="whitespace-nowrap">
+											☕ {post.render().then((p) => p.remarkPluginFrontmatter?.minutesRead)}
+										</div>
+									</aside>
+									<div class="text-base">{post.data.description}</div>
+								</div>
 							</div>
 						</li>
 					))
