--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 const today = new Date();
 ---
 
-<footer class="max-w-2xl px-4 sm:px-0 flex items-center justify-between mx-auto mb-8 mt-16">
-	<div class="flex gap-x-4 items-center py-2 px-4 rounded-lg transition-colors mx-auto sm:mx-0">
+<footer class="max-w-2xl px-4 sm:px-0 flex flex-col sm:flex-row gap-y-4 items-center justify-between mx-auto mb-8 pt-16 mt-auto self-end w-full">
+	<div class="flex gap-x-4 items-center py-2 px-4 rounded-lg transition-colors mx-auto sm:mx-0 text-primary-500">
 		<img src="/Me.jpeg" alt="Yunus Emre Kepenek" class="rounded-full w-16 h-16"/>
 		<div class="flex flex-col">
 			<span class="font-medium text-xl">Yunus Emre Kepenek</span>
@@ -13,12 +13,15 @@ const today = new Date();
 			</a>
 		</div>
 	</div>
-	<div class="gap-x-4 hidden sm:flex">
+	<div class="gap-x-4 flex">
 		<a href="https://github.com/yuunsgit" target="_blank" rel="noreferrer noopener">
 			<img src="/GitHub.svg" alt="GitHub" class="h-6 w-6 hover:rotate-6 rounded-none grayscale hover:grayscale-0 transition-all">
 		</a>
 		<a href="https://www.linkedin.com/in/yekepenek/" target="_blank" rel="noreferrer noopener">
 			<img src="/LinkedIn.svg" alt="LinkedIn" class="h-6 w-6 hover:rotate-6 rounded-none grayscale hover:grayscale-0 transition-all">
+		</a>
+		<a href="/rss.xml" target="_blank" rel="noreferrer noopener">
+			<img src="/Rss.svg" alt="RSS" class="h-6 w-6 hover:rotate-6 rounded-none grayscale hover:grayscale-0 transition-all">
 		</a>
 	</div>
 </footer>
