--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,6 +17,7 @@ const { title, description, image } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
+<link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Font preloads -->
 <link rel="preload" href="/fonts/Ubuntu-Regular.woff" as="font" type="font/woff" crossorigin />
