--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+import {Image} from "astro:assets";
 
 type Props = CollectionEntry<'thumbnails'>['data'];
 
@@ -20,7 +21,8 @@ const { title, description, pubDate, heroImage, readingTime } = Astro.props;
 		<main class="max-w-2xl mx-auto px-4 sm:px-0">
 			<article>
 				<div>
-					{heroImage && <img src={heroImage} alt="" class="rounded-xl shadow-lg shadow-primary-400" />}
+					{heroImage && <Image src={heroImage} alt={title} width={800} height={450} aspectRatio="16:9"
+										 class="rounded-xl shadow-lg shadow-primary-400" />}
 				</div>
 				<div class="prose mx-auto pt-16">
 					<div class="text-center sm:text-left">
