--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
@@ -28,11 +29,8 @@ const posts = (await getCollection('blog')).sort(
 							</a>
 							<div class="flex flex-col sm:flex-row gap-y-4 gap-x-4">
 								<a href={`/${post.slug}/`} class="sm:w-1/4 w-3/4 mx-auto">
-									<img
-										src={post.data.heroImage}
-										class="shadow-md shadow-primary-400 rounded-lg aspect-video"
-										alt={post.data.title}
-									>
+									<Image src={post.data.heroImage} alt={post.data.title} width={400} height={225} aspectRatio="16:9"
+										   class="shadow-md shadow-primary-400 rounded-lg aspect-video" />
 								</a>
 								<div class="sm:w-3/4 flex flex-col gap-y-2">
 									<a href={`/${post.slug}/`} class="sm:hidden">
