--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,12 @@ const posts = (await getCollection('blog')).sort(
 							</a>
 							<div class="flex flex-col sm:flex-row gap-y-4 gap-x-4">
 								<a href={`/${post.slug}/`} class="sm:w-1/4 w-3/4 mx-auto">
-									<Image src={post.data.heroImage} alt={post.data.title} width={400} height={225} aspectRatio="16:9" loading="eager"
+									<Image src={post.data.heroImage}
+										   alt={post.data.title}
+										   width={400} height={225}
+										   aspectRatio="16:9"
+										   loading="eager"
+										   decoding="sync"
 										   class="shadow-md shadow-primary-400 rounded-lg aspect-video" />
 								</a>
 								<div class="sm:w-3/4 flex flex-col gap-y-2">
