--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const today = new Date();
 
 <footer class="max-w-2xl px-4 sm:px-0 flex flex-col sm:flex-row gap-y-4 items-center justify-between mx-auto mb-8 pt-16 mt-auto self-end w-full">
 	<div class="flex gap-x-4 items-center py-2 px-4 rounded-lg transition-colors mx-auto sm:mx-0 text-primary-500">
-		<Image src={me} alt="Yunus Emre Kepenek" width={64} height={64} aspectRatio="1:1"
+		<Image src={me} alt="Yunus Emre Kepenek" width={128} height={128}
 			   class="rounded-full w-16 h-16" />
 		<div class="flex flex-col">
 			<span class="font-medium text-xl">Yunus Emre Kepenek</span>
