--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,19 +1,21 @@
 ---
+import {Image} from "astro:assets";
+import { ViewTransitions } from 'astro:transitions';
 import type { CollectionEntry } from 'astro:content';
+import FormattedDate from '../components/FormattedDate.astro';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
-import {Image} from "astro:assets";
 
 type Props = CollectionEntry<'thumbnails'>['data'];
 
-const { title, description, pubDate, heroImage, readingTime } = Astro.props;
+const { title, description, pubDate, heroImage, readingTime, slug } = Astro.props;
 ---
 
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} image={heroImage} />
+		<ViewTransitions />
 	</head>
 
 	<body>
@@ -27,6 +29,7 @@ const { title, description, pubDate, heroImage, readingTime } = Astro.props;
 										 aspectRatio="16:9"
 										 loading="eager"
 										 decoding="sync"
+										 transition:name={slug}
 										 class="rounded-xl shadow-lg shadow-primary-400" />}
 				</div>
 				<div class="prose mx-auto pt-16">
