--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,42 +13,42 @@ const {title, description, pubDate, heroImage, readingTime, slug} = Astro.props;
 ---
 
 <html lang="en">
-<head>
-    <BaseHead title={title} description={description} image={heroImage}/>
-    <ViewTransitions/>
-</head>
+    <head>
+        <BaseHead title={title} description={description} image={heroImage}/>
+        <ViewTransitions/>
+    </head>
 
-<body>
-<Header/>
-<main class="max-w-2xl mx-auto px-4 sm:px-0">
-    <article>
-        <div>
-            {heroImage &&
-                    <Image src={heroImage}
-                           alt={title}
-                           width={800} height={450}
-                           quality="high"
-                           aspectRatio="16:9"
-                           transition:name={slug}
-                           class="rounded-xl shadow-lg shadow-primary-400"/>
-            }
-        </div>
-        <div class="prose mx-auto pt-16">
-            <div class="text-center sm:text-left">
-                <h1 class="text-primary-500 mb-4">{title}</h1>
-                <aside class="flex gap-x-2 text-base justify-center sm:justify-start">
-                    <FormattedDate date={pubDate}/>
-                    &bullet;
-                    <div class="whitespace-nowrap">☕ {readingTime?.minutesRead}</div>
-                </aside>
-            </div>
-            <hr class="my-12"/>
-            <slot/>
-        </div>
-    </article>
-</main>
-<Footer/>
-</body>
+    <body>
+        <Header/>
+        <main class="max-w-2xl mx-auto px-4 sm:px-0">
+            <article>
+                <div>
+                    {heroImage &&
+                            <Image src={heroImage}
+                                   alt={title}
+                                   width={800} height={450}
+                                   quality="high"
+                                   aspectRatio="16:9"
+                                   transition:name={slug}
+                                   class="rounded-xl shadow-lg shadow-primary-400"/>
+                    }
+                </div>
+                <div class="prose mx-auto pt-16">
+                    <div class="text-center sm:text-left">
+                        <h1 class="mb-4">{title}</h1>
+                        <aside class="flex gap-x-2 text-base justify-center sm:justify-start">
+                            <FormattedDate date={pubDate}/>
+                            &bullet;
+                            <div class="whitespace-nowrap">☕ {readingTime?.minutesRead}</div>
+                        </aside>
+                    </div>
+                    <hr class="my-12"/>
+                    <slot/>
+                </div>
+            </article>
+        </main>
+        <Footer/>
+    </body>
 </html>
 
 <style>
