--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import Logo from "./Logo.astro";
 			<span class="text-base">
 				by
 				<a
-					href="https://www.yuuns.tech"
+					href="https://www.yunusemre.dev"
 					rel="noopener noreferrer"
 					target="_blank"
 					class="underline transition-colors">
@@ -21,7 +21,7 @@ import Logo from "./Logo.astro";
 		</h1>
 	</div>
 	<nav class="text-primary-500 text-base hidden sm:block">
-		<a href="https://www.yuuns.tech" class="py-2 px-4 rounded-lg hover:bg-gray-200 active:bg-gray-300 transition-colors">
+		<a href="https://www.yunusemre.dev" class="py-2 px-4 rounded-lg hover:bg-gray-200 active:bg-gray-300 transition-colors">
 			About me
 		</a>
 	</nav>
