--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ const today = new Date();
 			   class="rounded-full w-16 h-16" />
 		<div class="flex flex-col">
 			<span class="font-medium text-xl">Yunus Emre Kepenek</span>
-			<a href="https://www.yuuns.tech" target="_blank" rel="noreferrer noopener" class=" text-base flex gap-x-1 hover:gap-x-2 transition-all items-center font-light">
+			<a href="https://www.yunusemre.dev" target="_blank" rel="noreferrer noopener" class=" text-base flex gap-x-1 hover:gap-x-2 transition-all items-center font-light">
 				<span>Visit my portfolio</span>
 				<span>&rarr;</span>
 			</a>
